<resources>
    <string name="app_name">Weather App</string>
    <string name="my_account">My Account</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="settings">Settings</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="select_the_temperature_scale">Select the Temperature Scale</string>
    <string name="current_location">Current Location</string>
    <string name="check_temperature">Check Temperature</string>
    <string name="_28_c">28 C</string>
    <string name="lahore">Lahore</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="_09_08_2019">09/08/2019</string>
    <string name="wed">Wed</string>
    <string name="tem">28° C</string>
    <string name="_19_c">19 C</string>
    <string name="_02_pm">02 PM</string>
    <string name="fri">Fri</string>
    <string name="_12_c_16_c">12 C - 16 C</string>
    <string name="api">Api Response Comes Here</string>
    <string name="manage_cities">Manage Cities</string>
    <string name="seach_city">Seach City</string>
    <string-array name="temp_scale">
        <item> C </item>
        <item> F </item>

    </string-array>
    <string name="country_prompt">Choose a City</string>
    <string name="search">Search</string>
    <string name="search_city_here">Search City Here</string>
    <string name="added_cities">Added Cities :</string>
</resources>
