<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/currentStatus"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:id="@+id/currentStatusLayout"
>

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/weatherNowImage"

            android:src="@drawable/partlycloudy"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"

    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentTempText"
            android:text="@string/tem"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/currentCityText"
            app:layout_constraintStart_toEndOf="@id/weatherNowImage"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentCityText"
            android:text="@string/lahore"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/currentTempText"
            app:layout_constraintBottom_toTopOf="@id/currentStatusText"
            app:layout_constraintStart_toEndOf="@id/weatherNowImage"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentStatusText"
            android:text="@string/partly_cloudy"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/currentCityText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/weatherNowImage"
            app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>