<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_temperature_scale"
            android:id="@+id/inputTemp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/dropdownScale"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"

    />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropdownScale"
            android:entries="@array/temp_scale"

            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"

            app:layout_constraintStart_toEndOf="@id/inputTemp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
    />

    <CheckBox
            android:onClick="onCheckboxClicked"
            android:text="@string/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkedTextView"

            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="@id/inputTemp"
            app:layout_constraintBottom_toTopOf="@id/buttonTemp"
            app:layout_constraintTop_toBottomOf="@+id/inputTemp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTemp"
            android:text="@string/check_temperature"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/checkedTextView"
    />

</androidx.constraintlayout.widget.ConstraintLayout>