<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginBackground"
        android:id="@+id/constraintLayout">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:text="@string/my_account"
            android:textSize="50sp"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/cardView"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input1"
                    app:errorEnabled="true"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@id/input2"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toTopOf="parent"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText1"
                        android:hint="@string/enter_valid_email"
                        android:focusable="true"

                        android:textColorHint="@color/editTextColor"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input2"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@id/input1"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/input1"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/editText2"
                        android:textColorHint="@color/editTextColor"
                        android:hint="@string/password"
                        app:layout_constraintTop_toBottomOf="@id/editText1"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:id="@+id/button"
                    android:background="@color/editTextColor"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.7"
            />


            <TextView
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"

                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/input2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@id/button"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:src="@drawable/pic"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
    />

    <TextView
            android:text="@string/no_account_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"

            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>